--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,28 @@
 body {
-  margin: 0;
+  /* margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    sans-serif; */
+    margin:0px;
+    font-family: 'Quicksand', sans-serif;
+    -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+    /* background-color:rgb(211, 157, 58); */
+    background-image: linear-gradient(to right, rgb(158, 20, 71), rgb(211, 157, 58));
+}
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
+
+h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+p {
+  margin: 2px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
