--- a/src/main/Main-view.css
+++ b/src/main/Main-view.css
@@ -1,11 +1,27 @@
 .p-grid {
+    width: 70%;
     margin: 2px 10px;
+    background-color: rgb(251, 251, 251);
+    border-radius: 3px;
+    /* justify-content: center; */
+    border-bottom: 3px solid #dcdada;
+    padding: 2px 2px;
+    box-shadow: -2px 2px 3px 2px #0000004a;
+    text-align: center;
+    margin: auto;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+.card-title {
+    background-color: orange;
+    padding: 5px 0;
+    color: white;
+    margin: 0;
+}
+
+.card-content {
     display: flex;
-    background-color: rgb(231, 220, 220);
-    border-radius: 8px;
     justify-content: center;
-    border-bottom: 1px solid #ccbfbf;
-    padding: 5px 2px;
 }
 
 .p-md-4 {
@@ -27,4 +43,8 @@
 
 .a-title {
     margin:15px 0;
+}
+
+h3 {
+    margin: 3px;
 }
