--- a/src/main/Main-view.css
+++ b/src/main/Main-view.css
@@ -1,5 +1,5 @@
 .p-grid {
-    width: 70%;
+    width: 90%;
     margin: 2px 10px;
     background-color: rgb(251, 251, 251);
     border-radius: 3px;
@@ -12,12 +12,12 @@
     margin-top: 2px;
     margin-bottom: 2px;
 }
-.card-title {
+/* .card-title {
     background-color: orange;
     padding: 5px 0;
     color: white;
     margin: 0;
-}
+} */
 
 .card-content {
     display: flex;
@@ -47,4 +47,11 @@
 
 h3 {
     margin: 3px;
+}
+
+.amount-label {
+    box-shadow: inset 1px 0px 7px 0px #0000001c;
+    padding: 2px;
+    border-radius: 4px;
+    color: #766666;
 }
